# scholarship-api

./: .dockerignore  .env.development.example  .env.example  .env.production.example  .replit  25-50-PERCENT_CANARY_STATUS.md  30_DAY_IMPLEMENTATION_PLAN.md  AGENT3_FINAL_STATUS.md  AGENT3_READINESS_REPORT.md  AGENT_BRIDGE_FINAL_SUMMARY.md  AGENT_BRIDGE_README.md  AI_SCHOLARSHIP_PLAYBOOK_ALIGNMENT_PLAN.md  APPLICATION_AUTOMATION_ENHANCER.py  B2B_PARTNER_PILOT_ROSTER.md  BILLING_FEE_E2E_TEST_RESULTS.md  BILLING_SYSTEM_FINAL_VALIDATION_SUMMARY.md  BUG_FIXES_SUMMARY.md  CANARY_DEPLOYMENT_SUMMARY.md  CANARY_MONITORING_STATUS.md  CEO_APPLICATION_REPORT.md  CEO_CONFIRMATION_AGENT3_RESPONSE.md  CEO_EVIDENCE_MANIFEST_NOV_12.md  CEO_FINAL_DECISION_ACKNOWLEDGMENT.md  CEO_FINAL_RESPONSE_2HR_DEADLINE.md  CEO_FINAL_SUMMARY.md  CEO_SECTION_V_REPORT_scholarship_api.md  CEO_STATUS_PACKAGE_SCHOLARSHIP_API.md  CHANGE_TICKET_CLOSURE_SUMMARY.md  COMPREHENSIVE_QA_ANALYSIS_FINAL_REPORT.md  COMPREHENSIVE_QA_ANALYSIS_FINAL_REPORT.py  COMPREHENSIVE_QA_ANALYSIS_REPORT.md  COMPREHENSIVE_QA_DEVOPS_REPORT.md  CONSOLIDATED_PACKAGE_TEMPLATE.md  CRITICAL_BUG_FIXES_VERIFICATION_REPORT.md  CRITICAL_DEPLOYMENT_FIXES.md  CURRENT_25-50_MONITORING_STATUS.md  DAILY_OPS_QUICKSTART.md  DATA_RETENTION_SCHEDULE_2025-11-14.md  DAY_2_OPERATIONS_CHECKLIST.md  DEPLOYMENT_FIX.md  (+253 more)
.well-known/: ceo.txt
attached_assets/: A2_scholarship_api_prompt_1766528665581.md  Pasted--2026-01-21-16-37-01-58-95d2d29f-User-request-id-app-en_1769038784669.txt  Pasted--2026-01-21-21-23-29-41-6fdd6b40-User-INFO-sqlalchemy-e_1769055830966.txt  Pasted--Final-QA-Fixes-Hardening-and-Docs-Polish-Context-Stack-FastAPI-Pydantic-v2-async-SQLAl-1755473925364_1755473925367.txt  Pasted--Fix-SEARCH-001-and-ELIGIBILITY-001-Rate-Limit-Hardening-Context-Stack-FastAPI-Pydantic--1755473374925_1755473374927.txt  Pasted--INSTRUCTIONS-TO-AGENT-1-Identify-yourself-based-on-you_1765645223849.txt  Pasted--Implement-Minor-Security-Validation-Fixes-VAL-902-SEC-1103-SEC-1104-Context-Stack-Fast-1755493246871_1755493246873.txt  Pasted--Minor-Security-Validation-Polish-VAL-902-SEC-1103-SEC-1104-and-QA-False-Positive-Alignment--1755492866790_1755492866792.txt  Pasted--Time-Deployment-Source-Log-2026-01-20-14-21-58-79-dea2_1768944194618.txt  Pasted--Time-Deployment-Source-Log-2026-01-21-21-21-04-67-6fdd_1769055844644.txt  (+150 more)
config/: database.py  (+5 more)
(+950 files in other folders)
